--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <div class="form-buttons">
-            <button type="submit" name="Cargar">Cargar</button>
+            <button type="submit" name="Cargar">Generar Hoja de Validación</button>
             <button type="reset" class="reset" name="Limpiar" onclick="limpiarFormulario()">Limpiar</button>
         </div>
     </nav>
